Added New GET API for getting all delted users